about page scaffold

--- a/_includes/partials/header.html
+++ b/_includes/partials/header.html
@@ -19,7 +19,7 @@
             </a>
         </div>
         <div class="col md-col-1">
-            <a href="#">
+            <a href="/about/">
                 <div class="menu-item">
                     About
                 </div>
