--- a/_includes/partials/header.html
+++ b/_includes/partials/header.html
@@ -3,7 +3,14 @@
         <div class="col md-col-1">
             <a href="/home"><div class="header-logo xs-m*1"></div></a>
         </div>
-        <div class="col md-col-8">.</div>
+        <div class="col md-col-7">.</div>
+        <div class="col md-col-1">
+            <a href="/play">
+                <div class="menu-item">
+                    Play
+                </div>
+            </a>
+        </div>
         <div class="col md-col-1">
             <a href="/glossary">
                 <div class="menu-item">
