glossary page content (terrible example but w/e)

--- a/css/main.scss
+++ b/css/main.scss
@@ -34,6 +34,11 @@ html, body {
     width: $content-width;
     margin: 0 auto;
 }
+
+.baloo {
+    font-family: 'Baloo Paaji', cursive;
+}
+
 // landing
 $landing-inner-height: 360px;
 
