--- a/_includes/partials/header.html
+++ b/_includes/partials/header.html
@@ -1,7 +1,7 @@
 <div class="header-outer xs-border-bottom">
     <div class="header-inner clearfix">
         <div class="col md-col-1">
-            <a href="/home"><div class="header-logo xs-m*1"></div></a>
+            <a href="/"><div class="header-logo xs-m*1"></div></a>
         </div>
         <div class="col md-col-7">.</div>
         <div class="col md-col-1">
