--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -6,12 +7,25 @@
 
     <link rel="stylesheet" href="/css/main.css" type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 </head>
+
 <body>
     <div class="wrapper">
     {{ content }}
     </div>
+
+    <!-- scripts -->
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    <script>
+        $('.slideshow').slick({
+            arrows: false,
+            adaptiveHeight: false,
+            autoplay: true,
+            autoplaySpee: 500
+        })
+    </script>
 </body>
 
 </html>
