--- a/_includes/partials/header.html
+++ b/_includes/partials/header.html
@@ -5,9 +5,9 @@
         </div>
         <div class="col md-col-7">.</div>
         <div class="col md-col-1">
-            <a href="/play">
+            <a href="/">
                 <div class="menu-item">
-                    Play
+                    Home
                 </div>
             </a>
         </div>
