--- a/css/main.scss
+++ b/css/main.scss
@@ -156,8 +156,7 @@ $landing-inner-height: 360px;
 }
 
 .slideshow {
-    height: 450px;
-    max-height: 450px;
+    height: calc(100vh - #{$header-height});
     .slideshow--image {
         height: 100%;
         background-size: cover;
