experimenting with fixed header, need to resolve the use of the $header-height offset. too distributed at this moment

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,9 @@
     <title>Through The System | {{page.title | default: "Base" }}</title>
 
     <link rel="stylesheet" href="/css/main.css" type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Arvo|Open+Sans" rel="stylesheet">
+    <!-- slick noise -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 </head>
 
