--- a/_includes/partials/header.html
+++ b/_includes/partials/header.html
@@ -1,4 +1,4 @@
-<div class="header-outer md-border-bottom">
+<div class="header-outer md-border-bottom fill-white xs-fixed xs-t0 xs-z1">
     <div class="header-inner clearfix">
         <div class="col md-col-1">
             <a href="/"><div class="header-logo xs-m*1"></div></a>
