--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,9 @@ html, body, .wrapper {
     height: 100vh;
     padding: 0px;
     margin: 0px;
+    position: fixed;
+    top: 0;
+    right: 0;
 }
 
 html, body {
