fixed tips layout

--- a/_layouts/tips.html
+++ b/_layouts/tips.html
@@ -9,8 +9,8 @@ title: Glossary
     <div class="sidebar-outer xs-col-12 sm-col-3 lg-col-2 sm-fixed xs-b0 sm-b0 xs-l0 sm-py 3sm-border-bottom sm-border-right fill-white solid-nav">
         <div class="sidebar-content arvo">
             <div class="menu xs-p2">
-                <h1 class="xs-text-left"><a href="/glossary">Glossary</a></h1>
-                {% for post in site.categories.glossary-terms %}
+                <h1 class="xs-text-left"><a href="/tips">Tips</a></h1>
+                {% for post in site.categories.tips %}
                     <div class="xs-text-2 xs-p1 xs-m1 menu-item">
                         <a href="{{post.url}}">{{post.title}}</a>
                     </div>
