--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,7 +23,9 @@
     <script>
         $('.slideshow').slick({
             arrows: false,
-            adaptiveHeight: false,
+            variableWidth: true,
+            slidesToShow: 1,
+            centerMode: true,
             autoplay: true,
             autoplaySpee: 500
         })
