fixed the call to action

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -26,8 +26,7 @@
             variableWidth: true,
             slidesToShow: 1,
             centerMode: true,
-            autoplay: true,
-            autoplaySpee: 500
+            autoplay: true
         })
     </script>
 </body>
