added know your rights pdf. new images

--- a/_includes/partials/header.html
+++ b/_includes/partials/header.html
@@ -3,7 +3,7 @@
         <div class="col md-col-1">
             <a href="/"><div class="header-logo xs-m*1"></div></a>
         </div>
-        <div class="col md-col-7">.</div>
+        <div class="col md-col-6">.</div>
         <div class="col md-col-1">
             <a href="/">
                 <div class="menu-item">
@@ -15,6 +15,13 @@
             <a href="/glossary">
                 <div class="menu-item">
                     Glossary
+                </div>
+            </a>
+        </div>
+        <div class="col md-col-2">
+            <a href="{{ site.baseurl }}/assets/know-your-rights.pdf">
+                <div class="menu-item">
+                    Know Your Rights
                 </div>
             </a>
         </div>
